proofread 3) emp strategy & 4) data

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -313,14 +313,14 @@ Alcohol plays a crucial role in the context of spectator violence in German foot
 In order to identify the causal effect of soccer matches on criminal behavior, I exploit time series and cross-sectional variation. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
 
 
-The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$, which in the simple baseline model is given by:\footnote{For ease of comparison, the assault rate is defined as the number of assaults per 100,000 individuals multiplied with the number of days per year. For details, refer to \cite{hener2019noise}.}
+The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. The assault rate is defined as the number of assaults per million population and is given by:
 
 \begin{align}
 	\text{Assaults}_{rdmy} = \alpha + \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \underbrace{\gamma_d + \eta_m + \theta_y}_{\text{date}_{dmy}} + \lambda \mathbf{X}_{rdmy} + \varepsilon_{rdmy}
 	\label{eq_soc_ext:model}.
 \end{align}
 
-$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for carnival season and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed-.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
+$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home games takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for carnival season and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
 
 
 % displacement effects - temporal & spatial
@@ -343,34 +343,33 @@ Given the setup of the empirical approach, there could be another threat to the 
 \bigskip
 \section{Data}\label{sec_soc_ext:data} 
 % Description data
-The data set used for the analysis covers the time window 2011-2015 and contains the regions in which soccer games of the first three leagues of the German football league system take place. I combine five data sources in order to examine the impact of public mass events on criminal behavior.
+The data set used for the analysis covers the time window 2011-2015 and contains the regions in which soccer games of the first three leagues of the German football league system take place. I combine various data sources in order to examine the impact of public mass events on criminal behavior.
 
 
 
 \subsection{Crime data}
-The crime data is coming from the German Police Crime Statistics (Polizeiliche Kriminalstatistik), which is provided by the Federal Criminal Police Office (Bundeskriminalamt).\footnote{Many aspects of the data preparation is inspired from \cite{hener2019noise} who is using the same data in order to examine the causal effect of noise pollution on criminal behavior.} It covers the universe of individuals that fall victim to a crime against their legally protected personal rights between 2011 and 2015. Yet, as the data is only reported after the end of police procedures, the data is truncated to the period from January 2011 to May 2015 to avoid any problems with lags between the occurrence of the crime and when it is reported. The data includes next to the time (up to the hour) and place (municipality level) of the crime, the crime type code, the victim's age and gender, characteristics of the assault execution (attempt/successful, usage of firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, this covers formal relationships (such as types of kin or acquaintances). On the other hand, this examines relationships in a spatial-social manner (for instance living in the same household, or being in an education or care context).} Roughly 40\% of the victims are female, their average age is 32 years, and 40\% of the victims haven't had any prior relationship with the suspect.
+The crime data is coming from the German Police Crime Statistics, which is provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation is inspired from \cite{hener2019noise} who is using the same data in order to examine the causal effect of noise pollution on criminal behavior.} It covers the universe of individuals that fall victim to a crime against their legally protected personal rights between 2011 and 2015. Yet, as the data is only reported after the end of police procedures, the data is truncated to the period from January 2011 to May 2015 to avoid any problems with lags between the occurrence of the crime and when it is reported. Besides, the months of June are excluded from the analysis as no games are played during that time of the year. The data includes next to the time (up to the hour) and place (municipality level) of the crime, the crime type code, the victim's age and gender, characteristics of the assault execution (attempt/successful, usage of firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, this covers formal relationships (such as types of kin or acquaintances). On the other hand, this examines relationships in a spatial-social manner (for instance living in the same household, or being in an education or care context).} Roughly 40\% of the victims are female, their average age is 32 years, and 40\% of the victims haven't had any prior relationship with the suspect.
 
-The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per 100,000 inhabitants, and multiplied by 365 in order to mirror annual crime rates. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of 'intentional simple bodily injury' (Vorsätzliche einfache Körperverletzung § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90\% of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45\% of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
+The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of 'intentional simple bodily harm' (Vorsätzliche einfache Körperverletzung § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90\% of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45\% of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
 
-Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15\% of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. You can see higher values on Friday and Saturday, whereas the other days have assault rates belonging to the same ballpark. Panel C shows that the number of assaults have a strong seasonal pattern with the highest value recorded in May, and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particular impressive outlier in this context. \footnote{Panels C and D are showing data for the year 214 only. Appendix Figure \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
+Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15\% of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. You can see higher values on Friday and Saturday, whereas the other days have assault rates belonging to the same ballpark. Panel C shows that the number of assaults have a strong seasonal pattern with the highest value recorded in May, and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particular impressive outlier in this context. \footnote{Panels C and D are showing data for the year 2014 only. Appendix Figure \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
 
 % XXX per day roughly around 320 per day, peak on new year's eve, high on holidays (carneval) 
-\textbf{XXX delete June, as there are no games played in that month}
 
 
 
 \subsection{Soccer data}
-The data on soccer matches is self-collected and is obtained via web-scraping from kicker.de and transfermarkt.de. It captures all matches that are carried out in the context of the German football league system over the period January 2011 until May 2015. The data contains detailed match and table standing parameters, e.g. time and place of the match, attendance, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive data on the single teams; such as size of the team, average age, market value, and number of foreign players. The stadiums where the matches take place are geographically encoded and will "activate" the treatment in that region in which the stadium is located and a home game is played. Figure \ref{fig_soc_ext:map_gem_stadiums} depicts a map with all 69 stadiums in the data set. 
+The data on soccer matches is self-collected and is obtained via web-scraping from kicker.de and transfermarkt.de. It captures all matches that are carried out in the context of the first three leagues of the German football league system over the period January 2011 until May 2015. The data contains detailed match and table standing parameters, e.g. time and place of the match, attendance, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive data on the single teams; such as size of the team, average age, market value, and number of foreign players. The stadiums where the matches take place are geographically encoded and will "activate" the treatment in the region in which the stadium is located. Figure \ref{fig_soc_ext:map_gem_stadiums} depicts a map with all 69 stadiums in the data set. 
 
 % XXX  stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6\% of all matches.}
 
-Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday.\footnote{The inclusion of day-of-week fixed effects in the baseline specification help to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior.} This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The three different divisions can attract spectators differently, as depicted in Panel C. The Bundesliga as the highest tier can intrigue the most people to show up with an average audience of 44,000 people per game, followed by the second league with on average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
+Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The three different divisions can attract spectators differently, as depicted in Panel C. The `Bundesliga' draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league can attract on average a bit less than 6,000 fans per game to show up in the stadium.
 
-When investigating channels of how soccer games can affect assaults, I exploit betting odds that were obtained via webscraping from oddsportal.com. The betting odds give an idea about pregame expectations. I translate the odds of the three game outcomes to probabilities, which are the inverse of the betting odds. The probabilities serve as good predictors for the game outcomes, as it is shown by Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}. In panel A, I show the close relationship between the realized score differential and the probability spread. Panel B and C show that the probability of victory is increasing with higher values of the probability spread. 
+When investigating channels of how soccer games can affect assaults, I exploit betting odds that were obtained via webscraping from oddsportal.com. The betting odds give an idea about pregame expectations. I translate the odds of the three game outcomes to probabilities, which are the inverse of the betting odds. The probabilities serve as good predictors for game outcomes, as it is shown by Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}. In panel A, I show the close relationship between the realized score differential and the probability spread. Panel B and C show that the probability of victory is increasing with higher values of the probability spread. 
 
 
 \subsection{Weather data}
-The weather data comes from Germany's National Meteorological Service (Deutscher Wetterdienst). In order to construct the weather control variables, I use the sample of weather monitors, which measure relevant weather variables all at the same time.\footnote{I use the following weather variables as daily averages: the daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth, and wind velocity.} From this set of monitors I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. The quality of the matches between weather monitors and stadiums is high, as the average distance between stadiums and monitors is 15 kilometers. The distribution of the distance of monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}. Few of the weather variables have missing data, which are filled in the following way: propagate the last valid observation forward to the next valid observation (i.e. forward fill).\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2\%), snow depth (<0.6\%).}
+The weather data comes from Germany's National Meteorological Service (Deutscher Wetterdienst). In order to construct the weather control variables, I use the sample of weather monitors, which measure relevant weather variables all at the same time.\footnote{I use the following weather variables as daily averages: the daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth, and wind velocity.} From this set of monitors I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. The quality of the matches between weather monitors and stadiums is high, as the average distance between stadiums and monitors is 15 kilometers.\footnote{The distribution of the distance of monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}.} Few of the weather variables have missing data, which are filled in the following way: propagate the last valid observation forward to the next valid observation (i.e. forward fill).\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2\%) and snow depth (<0.6\%).}
 
 
 
@@ -380,7 +379,7 @@ In order to capture any variation of the crime rate between ordinary and special
 
 
 \subsection{Regional Database}
-The Federal Statistical Office and the statistical offices of the Länder provide a data base of detailed statistics by various subject areas on a very granular spatial level. Thus, I am able to build a panel on the municipality-year level containing comprehensive information on topics such as territory, population, labor market, election results, housing, economic sectors, and public budgets. The information is used to construct weights for the regression analysis or to build assault rates. Furthermore, the plan for the future is to leverage the high dimensionality of the data in order to investigate treatment effect heterogeneity with the help of machine learning algorithms (e.g. by making use of causal forests). 
+The Federal Statistical Office and the statistical offices of the Länder provide a data base of detailed statistics by various subject areas on a very granular spatial level. Thus, I am able to build a panel on the municipality-year level containing comprehensive information on topics such as territory, population, labor market, election results, housing, economic sectors, and public budgets. The information is used to construct weights for the regression analysis or to build assault rates. {\color{red}Furthermore, the plan for the future is to leverage the high dimensionality of the data in order to investigate treatment effect heterogeneity with the help of machine learning algorithms (e.g. by making use of causal forests).} 
 
 
 
@@ -641,18 +640,7 @@ larger effects for prominent games
 \vspace*{\fill}\clearpage
 
 
-%--------------------------------------------
-% Pregame probability spread
-\vspace*{\fill}
-\begin{figure}[H]\centering
-	\caption{Pregame probability spread and actual game outcomes}\label{fig_soc_ext:pregame_probability_spread_outcomes}
-	\includegraphics[width=\linewidth]{descriptive/soc_ext_pregame_probability_spread_outcomes.pdf}
-	\scriptsize
-	\begin{minipage}{\linewidth}
-		\emph{Notes:} Panel A shows the relationship between realized score differential versus the pregame probability spread. The realized score differential is defined as the home team's minus the guest team's final score. The plotted regression line has an intercept of -0.020 (s.e. =0.29) and a slope of 2.328 (s.e. = 0.095). Panel B presents the fraction of actual game results by predicted outcome classifications. Panel C shows the probability of winning a game as a function of the probability spread. The curve is obtained from a regression using a third-order polynomial.
-	\end{minipage}
-\end{figure}
-\vspace*{\fill}\clearpage
+
 %--------------------------------------------
 % MAP : (I) WEATHER monitors & (II) NEIGHBOUR regions
 \newgeometry{left=1cm,right=1cm,top=3cm,bottom=3cm} 
@@ -996,6 +984,18 @@ larger effects for prominent games
 	\end{subfigure}
 	\begin{minipage}{\linewidth}
 		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.\newline \emph{Source:} Own representation with data from the Federal Criminal Police Office}
+	\end{minipage}
+\end{figure}
+\vspace*{\fill}\clearpage
+%--------------------------------------------
+% Pregame probability spread
+\vspace*{\fill}
+\begin{figure}[H]\centering
+	\caption{Pregame probability spread and actual game outcomes}\label{fig_soc_ext:pregame_probability_spread_outcomes}
+	\includegraphics[width=\linewidth]{descriptive/soc_ext_pregame_probability_spread_outcomes.pdf}
+	\scriptsize
+	\begin{minipage}{\linewidth}
+		\emph{Notes:} Panel A shows the relationship between realized score differential versus the pregame probability spread. The realized score differential is defined as the home team's minus the guest team's final score. The plotted regression line has an intercept of -0.020 (s.e. =0.29) and a slope of 2.328 (s.e. = 0.095). Panel B presents the fraction of actual game results by predicted outcome classifications. Panel C shows the probability of winning a game as a function of the probability spread. The curve is obtained from a regression using a third-order polynomial.
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
