--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-08-10 14:06:17 +0200 
+%% Created for Marc Fabel at 2020-08-17 13:13:06 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,13 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{pwc2016,
+	Author = {PwC},
+	Date-Added = {2020-08-17 12:44:53 +0200},
+	Date-Modified = {2020-08-17 13:12:44 +0200},
+	Title = {{Survey among soccer fans (`Fu{\ss}ballfan-Befragung')}},
+	Year = {2016}}
 
 @article{pilz2005kuttenfan,
 	Author = {Pilz, Gunter A},
